# workshop-kedro-huggingface

./: .gitpod.yml  README.md
reddit-analytics/: README.md  pyproject.toml  session_store.db
reddit-analytics/conf/base/: catalog.yml  parameters_summarizer.yml
reddit-analytics/src/reddit_analytics/: __init__.py  __main__.py  pipeline_registry.py
reddit-analytics/src/reddit_analytics/pipelines/summarizer/: __init__.py  nodes.py  pipeline.py
reddit-analytics/src/tests/pipelines/summarizer/: test_pipeline.py
