[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "reddit_analytics"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
reddit-analytics = "reddit_analytics.__main__:main"

[tool.kedro]
package_name = "reddit_analytics"
project_name = "reddit-analytics"
kedro_init_version = "0.19.3"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "reddit_analytics.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
